source/references/2.6.0/configuration.markdown
---
canonical: "/references/latest/configuration.html"
layout: default
title: Configuration Reference
---


Configuration Reference
=====


<p><strong>This page is autogenerated; any changes will get overwritten</strong> <em>(last generated on Tue May 03 09:52:17 -0700 2011)</em></p>


Specifying Configuration Parameters
=====


### On The Command-Line

<p>Every Puppet executable (with the exception of <code>puppetdoc</code>) accepts all of
the parameters below, but not all of the arguments make sense for every executable.</p>
<p>I have tried to be as thorough as possible in the descriptions of the
arguments, so it should be obvious whether an argument is appropriate or not.</p>
<p>These parameters can be supplied to the executables either as command-line
options or in the configuration file.  For instance, the command-line
invocation below would set the configuration directory to <code>/private/puppet</code>:</p>
<pre><code>
$ puppet agent --confdir=/private/puppet
</code></pre>
<p>Note that boolean options are turned on and off with a slightly different
syntax on the command line:</p>
<pre><code>
$ puppet agent --storeconfigs

$ puppet agent --no-storeconfigs
</code></pre>
<p>The invocations above will enable and disable, respectively, the storage of
the client configuration.</p>


### Configuration Files

<p>As mentioned above, the configuration parameters can also be stored in a
configuration file, located in the configuration directory.  As root, the
default configuration directory is <code>/etc/puppet</code>, and as a regular user, the
default configuration directory is <code>~user/.puppet</code>.  As of 0.23.0, all
executables look for <code>puppet.conf</code> in their configuration directory
(although they previously looked for separate files).  For example,
<code>puppet.conf</code> is located at <code>/etc/puppet/puppet.conf</code> as root and
<code>~user/.puppet/puppet.conf</code> as a regular user by default.</p>
<p>All executables will set any parameters set within the <code>main</code> section,
and each executable will also use one of the <code>master</code>, <code>agent</code>, or
<code>user</code> sections.</p>

### File Format

<p>The file follows INI-style formatting.  Here is an example of a very simple
<code>puppet.conf</code> file:</p>
<pre><code>
[main]
  confdir = /private/puppet
  storeconfigs = true
</code></pre>
<p>Note that boolean parameters must be explicitly specified as <code>true</code> or
<code>false</code> as seen above.</p>
<p>If you need to change file parameters (e.g., reset the mode or owner), do
so within curly braces on the same line:</p>
<pre><code>
[main]
  myfile = /tmp/whatever {owner = root, mode = 644}
</code></pre>
<p>If you're starting out with a fresh configuration, you may wish to let
the executable generate a template configuration file for you by invoking
the executable in question with the <code>--genconfig</code> command.  The executable
will print a template configuration to standard output, which can be
redirected to a file like so:</p>
<pre><code>
$ puppet agent --genconfig &gt; /etc/puppet/puppet.conf
</code></pre>
<p>Note that this invocation will replace the contents of any pre-existing
<code>puppet.conf</code> file, so make a backup of your present config if it contains
valuable information.</p>
<p>Like the <code>--genconfig</code> argument, the executables also accept a <code>--genmanifest</code>
argument, which will generate a manifest that can be used to manage all of
Puppet's directories and files and prints it to standard output.  This can
likewise be redirected to a file:</p>
<pre><code>
$ puppet agent --genmanifest &gt; /etc/puppet/manifests/site.pp
</code></pre>
<p>Puppet can also create user and group accounts for itself (one <code>puppet</code> group
and one <code>puppet</code> user) if it is invoked as <code>root</code> with the <code>--mkusers</code> argument:</p>
<pre><code>
$ puppet agent --mkusers
</code></pre>




Signals
=====

<p>The <code>puppet agent</code> and <code>puppet master</code> executables catch some signals for special
handling.  Both daemons catch (<code>SIGHUP</code>), which forces the server to restart
tself.  Predictably, interrupt and terminate (<code>SIGINT</code> and <code>SIGTERM</code>) will shut
down the server, whether it be an instance of <code>puppet agent</code> or <code>puppet master</code>.</p>
<p>Sending the <code>SIGUSR1</code> signal to an instance of <code>puppet agent</code> will cause it to
immediately begin a new configuration transaction with the server.  This
signal has no effect on <code>puppet master</code>.</p>


Configuration Parameter Reference
=====

<p>Below is a list of all documented parameters.  Not all of them are valid with all
Puppet executables, but the executables will ignore any inappropriate values.</p>

### async_storeconfigs

<p>Whether to use a queueing system to provide asynchronous database integration. Requires that <code>puppetqd</code> be running and that 'PSON' support for ruby be installed.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### authconfig

<p>The configuration file that defines the rights to the different namespaces and methods.  This can be used as a coarse-grained authorization system for both <code>puppet agent</code> and <code>puppet master</code>.</p>
<ul>
<li><strong>Default</strong>: $confdir/namespaceauth.conf</li>
</ul>


### autoflush

<p>Whether log files should always flush to disk.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### autosign

<p>Whether to enable autosign.  Valid values are true (which autosigns any key request, and is a very bad idea), false (which never autosigns any key request), and the path to a file, which uses that configuration file to determine which keys to sign.</p>
<ul>
<li><strong>Default</strong>: $confdir/autosign.conf</li>
</ul>


### bindaddress

<p>The address a listening server should bind to.  Mongrel servers default to 127.0.0.1 and WEBrick defaults to 0.0.0.0.</p>


### bucketdir

<p>Where FileBucket files are stored.</p>
<ul>
<li><strong>Default</strong>: $vardir/bucket</li>
</ul>


### ca

<p>Whether the master should function as a certificate authority.</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>


### ca_days

<p>How long a certificate should be valid. This parameter is deprecated, use ca_ttl instead</p>


### ca_md

<p>The type of hash used in certificates.</p>
<ul>
<li><strong>Default</strong>: md5</li>
</ul>


### ca_name

<p>The name to use the Certificate Authority certificate.</p>
<ul>
<li><strong>Default</strong>: $certname</li>
</ul>


### ca_port

<p>The port to use for the certificate authority.</p>
<ul>
<li><strong>Default</strong>: $masterport</li>
</ul>


### ca_server

<p>The server to use for certificate authority requests.  It's a separate server because it cannot and does not need to horizontally scale.</p>
<ul>
<li><strong>Default</strong>: $server</li>
</ul>


### ca_ttl

<p>The default TTL for new certificates; valid values must be an integer, optionally followed by one of the units 'y' (years of 365 days), 'd' (days), 'h' (hours), or 's' (seconds). The unit defaults to seconds. If this parameter is set, ca_days is ignored. Examples are '3600' (one hour) and '1825d', which is the same as '5y' (5 years)</p>
<ul>
<li><strong>Default</strong>: 5y</li>
</ul>


### cacert

<p>The CA certificate.</p>
<ul>
<li><strong>Default</strong>: $cadir/ca_crt.pem</li>
</ul>


### cacrl

<p>The certificate revocation list (CRL) for the CA. Will be used if present but otherwise ignored.</p>
<ul>
<li><strong>Default</strong>: $cadir/ca_crl.pem</li>
</ul>


### cadir

<p>The root directory for the certificate authority.</p>
<ul>
<li><strong>Default</strong>: $ssldir/ca</li>
</ul>


### cakey

<p>The CA private key.</p>
<ul>
<li><strong>Default</strong>: $cadir/ca_key.pem</li>
</ul>


### capass

<p>Where the CA stores the password for the private key</p>
<ul>
<li><strong>Default</strong>: $caprivatedir/ca.pass</li>
</ul>


### caprivatedir

<p>Where the CA stores private certificate information.</p>
<ul>
<li><strong>Default</strong>: $cadir/private</li>
</ul>


### capub

<p>The CA public key.</p>
<ul>
<li><strong>Default</strong>: $cadir/ca_pub.pem</li>
</ul>


### catalog_format

<p>(Deprecated for 'preferred_serialization_format') What format to use to dump the catalog.  Only supports 'marshal' and 'yaml'.  Only matters on the client, since it asks the server for a specific format.</p>


### catalog_terminus

<p>Where to get node catalogs.  This is useful to change if, for instance, you'd like to pre-compile catalogs and store them in memcached or some other easily-accessed store.</p>
<ul>
<li><strong>Default</strong>: compiler</li>
</ul>


### cert_inventory

<p>A Complete listing of all certificates</p>
<ul>
<li><strong>Default</strong>: $cadir/inventory.txt</li>
</ul>


### certdir

<p>The certificate directory.</p>
<ul>
<li><strong>Default</strong>: $ssldir/certs</li>
</ul>


### certdnsnames

<p>The DNS names on the Server certificate as a colon-separated list. If it's anything other than an empty string, it will be used as an alias in the created certificate.  By default, only the server gets an alias set up, and only for 'puppet'.</p>


### certificate_revocation

<p>Whether certificate revocation should be supported by downloading a Certificate Revocation List (CRL) to all clients.  If enabled, CA chaining will almost definitely not work.</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>


### certname

<p>The name to use when handling certificates.  Defaults to the fully qualified domain name.</p>
<ul>
<li><strong>Default</strong>: (the system's fully qualified domain name)</li>
</ul>


### classfile

<p>The file in which puppet agent stores a list of the classes associated with the retrieved configuration.  Can be loaded in the separate <code>puppet</code> executable using the <code>--loadclasses</code> option.</p>
<ul>
<li><strong>Default</strong>: $statedir/classes.txt</li>
</ul>


### client_datadir

<p>The directory in which serialized data is stored on the client.</p>
<ul>
<li><strong>Default</strong>: $vardir/client_data</li>
</ul>


### clientbucketdir

<p>Where FileBucket files are stored locally.</p>
<ul>
<li><strong>Default</strong>: $vardir/clientbucket</li>
</ul>


### clientyamldir

<p>The directory in which client-side YAML data is stored.</p>
<ul>
<li><strong>Default</strong>: $vardir/client_yaml</li>
</ul>


### code

<p>Code to parse directly.  This is essentially only used by <code>puppet</code>, and should only be set if you're writing your own Puppet executable</p>


### color

<p>Whether to use colors when logging to the console. Valid values are <code>ansi</code> (equivalent to <code>true</code>), <code>html</code> (mostly used during testing with TextMate), and <code>false</code>, which produces no color.</p>
<ul>
<li><strong>Default</strong>: ansi</li>
</ul>


### confdir

<p>The main Puppet configuration directory.  The default for this parameter is calculated based on the user.  If the process is running as root or the user that <code>puppet master</code> is supposed to run as, it defaults to a system directory, but if it's running as any other user, it defaults to being in <code>~</code>.</p>
<ul>
<li><strong>Default</strong>: /etc/puppet</li>
</ul>


### config

<p>The configuration file for doc.</p>
<ul>
<li><strong>Default</strong>: $confdir/puppet.conf</li>
</ul>


### config_version

<p>How to determine the configuration version.  By default, it will be the time that the configuration is parsed, but you can provide a shell script to override how the version is determined.  The output of this script will be added to every log message in the reports, allowing you to correlate changes on your hosts to the source version on the server.</p>


### configprint

<p>Print the value of a specific configuration parameter.  If a parameter is provided for this, then the value is printed and puppet exits.  Comma-separate multiple values.  For a list of all values, specify 'all'.  This feature is only available in Puppet versions higher than 0.18.4.</p>


### configtimeout

<p>How long the client should wait for the configuration to be retrieved before considering it a failure.  This can help reduce flapping if too many clients contact the server at one time.</p>
<ul>
<li><strong>Default</strong>: 120</li>
</ul>


### couchdb_url

<p>The url where the puppet couchdb database will be created</p>
<ul>
<li><strong>Default</strong>: <a href="http://127.0.0.1:5984/puppet">http://127.0.0.1:5984/puppet</a></li>
</ul>


### csrdir

<p>Where the CA stores certificate requests</p>
<ul>
<li><strong>Default</strong>: $cadir/requests</li>
</ul>


### daemonize

<p>Send the process into the background.  This is the default.</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>


### dbadapter

<p>The type of database to use.</p>
<ul>
<li><strong>Default</strong>: sqlite3</li>
</ul>


### dbconnections

<p>The number of database connections. Only used when networked databases are used.  Will be ignored if the value is an empty string or is less than 1.</p>
<ul>
<li><strong>Default</strong>: 0</li>
</ul>


### dblocation

<p>The database cache for client configurations.  Used for querying within the language.</p>
<ul>
<li><strong>Default</strong>: $statedir/clientconfigs.sqlite3</li>
</ul>


### dbmigrate

<p>Whether to automatically migrate the database.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### dbname

<p>The name of the database to use.</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### dbpassword

<p>The database password for caching. Only used when networked databases are used.</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### dbport

<p>The database password for caching. Only used when networked databases are used.</p>


### dbserver

<p>The database server for caching. Only used when networked databases are used.</p>
<ul>
<li><strong>Default</strong>: localhost</li>
</ul>


### dbsocket

<p>The database socket location. Only used when networked databases are used.  Will be ignored if the value is an empty string.</p>


### dbuser

<p>The database user for caching. Only used when networked databases are used.</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### diff

<p>Which diff command to use when printing differences between files.</p>
<ul>
<li><strong>Default</strong>: diff</li>
</ul>


### diff_args

<p>Which arguments to pass to the diff command when printing differences between files.</p>
<ul>
<li><strong>Default</strong>: -u</li>
</ul>


### downcasefacts

<p>Whether facts should be made all lowercase when sent to the server.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### dynamicfacts

<p>Facts that are dynamic; these facts will be ignored when deciding whether changed facts should result in a recompile.  Multiple facts should be comma-separated.</p>
<ul>
<li><strong>Default</strong>: memorysize,memoryfree,swapsize,swapfree</li>
</ul>


### environment

<p>The environment Puppet is running in.  For clients (e.g., <code>puppet agent</code>) this determines the environment itself, which is used to find modules and much more.  For servers (i.e., <code>puppet master</code>) this provides the default environment for nodes we know nothing about.</p>
<ul>
<li><strong>Default</strong>: production</li>
</ul>


### evaltrace

<p>Whether each resource should log when it is being evaluated.  This allows you to interactively see exactly what is being done.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### external_nodes

<p>An external command that can produce node information.  The output must be a YAML dump of a hash, and that hash must have one or both of <code>classes</code> and <code>parameters</code>, where <code>classes</code> is an array and <code>parameters</code> is a hash.  For unknown nodes, the commands should exit with a non-zero exit code. This command makes it straightforward to store your node mapping information in other data sources like databases.</p>
<ul>
<li><strong>Default</strong>: none</li>
</ul>


### factdest

<p>Where Puppet should store facts that it pulls down from the central server.</p>
<ul>
<li><strong>Default</strong>: $vardir/facts/</li>
</ul>


### factpath

<p>Where Puppet should look for facts.  Multiple directories should be colon-separated, like normal PATH variables.</p>
<ul>
<li><strong>Default</strong>: $vardir/lib/facter/${<a href="File::PATH_SEPARATOR">File::PATH_SEPARATOR</a>}$vardir/facts</li>
</ul>


### facts_terminus

<p>Where to get node facts.</p>
<ul>
<li><strong>Default</strong>: facter</li>
</ul>


### factsignore

<p>What files to ignore when pulling down facts.</p>
<ul>
<li><strong>Default</strong>: .svn CVS</li>
</ul>


### factsource

<p>From where to retrieve facts.  The standard Puppet <code>file</code> type is used for retrieval, so anything that is a valid file source can be used here.</p>
<ul>
<li><strong>Default</strong>: puppet://$server/facts/</li>
</ul>


### factsync

<p>Whether facts should be synced with the central server.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### fileserverconfig

<p>Where the fileserver configuration is stored.</p>
<ul>
<li><strong>Default</strong>: $confdir/fileserver.conf</li>
</ul>


### filetimeout

<p>The minimum time to wait (in seconds) between checking for updates in configuration files.  This timeout determines how quickly Puppet checks whether a file (such as manifests or templates) has changed on disk.</p>
<ul>
<li><strong>Default</strong>: 15</li>
</ul>


### freeze_main

<p>Freezes the 'main' class, disallowing any code to be added to it.  This essentially means that you can't have any code outside of a node, class, or definition other than in the site manifest.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### genconfig

<p>Whether to just print a configuration to stdout and exit.  Only makes sense when used interactively.  Takes into account arguments specified on the CLI.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### genmanifest

<p>Whether to just print a manifest to stdout and exit.  Only makes sense when used interactively.  Takes into account arguments specified on the CLI.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### graph

<p>Whether to create dot graph files for the different configuration graphs.  These dot files can be interpreted by tools like OmniGraffle or dot (which is part of ImageMagick).</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### graphdir

<p>Where to store dot-outputted graphs.</p>
<ul>
<li><strong>Default</strong>: $statedir/graphs</li>
</ul>


### group

<p>The group puppet master should run as.</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### hostcert

<p>Where individual hosts store and look for their certificates.</p>
<ul>
<li><strong>Default</strong>: $certdir/$certname.pem</li>
</ul>


### hostcrl

<p>Where the host's certificate revocation list can be found. This is distinct from the certificate authority's CRL.</p>
<ul>
<li><strong>Default</strong>: $ssldir/crl.pem</li>
</ul>


### hostcsr

<p>Where individual hosts store and look for their certificate requests.</p>
<ul>
<li><strong>Default</strong>: $ssldir/csr_$certname.pem</li>
</ul>


### hostprivkey

<p>Where individual hosts store and look for their private key.</p>
<ul>
<li><strong>Default</strong>: $privatekeydir/$certname.pem</li>
</ul>


### hostpubkey

<p>Where individual hosts store and look for their public key.</p>
<ul>
<li><strong>Default</strong>: $publickeydir/$certname.pem</li>
</ul>


### http_compression

<p>Allow http compression in REST communication with the master. This setting might improve performance for agent -&gt; master communications over slow WANs. Your puppetmaster needs to support compression (usually by activating some settings in a reverse-proxy in front of the puppetmaster, which rules out webrick). It is harmless to activate this settings if your master doesn't support compression, but if it supports it, this setting might reduce performance on high-speed LANs.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### http_proxy_host

<p>The HTTP proxy host to use for outgoing connections.  Note: You may need to use a FQDN for the server hostname when using a proxy.</p>
<ul>
<li><strong>Default</strong>: none</li>
</ul>


### http_proxy_port

<p>The HTTP proxy port to use for outgoing connections</p>
<ul>
<li><strong>Default</strong>: 3128</li>
</ul>


### httplog

<p>Where the puppet agent web server logs.</p>
<ul>
<li><strong>Default</strong>: $logdir/http.log</li>
</ul>


### ignorecache

<p>Ignore cache and always recompile the configuration.  This is useful for testing new configurations, where the local cache may in fact be stale even if the timestamps are up to date - if the facts change or if the server changes.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### ignoreimport

<p>A parameter that can be used in commit hooks, since it enables you to parse-check a single file rather than requiring that all files exist.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### ignoreschedules

<p>Boolean; whether puppet agent should ignore schedules.  This is useful for initial puppet agent runs.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### keylength

<p>The bit length of keys.</p>
<ul>
<li><strong>Default</strong>: 1024</li>
</ul>


### ldapattrs

<p>The LDAP attributes to include when querying LDAP for nodes.  All returned attributes are set as variables in the top-level scope. Multiple values should be comma-separated.  The value 'all' returns all attributes.</p>
<ul>
<li><strong>Default</strong>: all</li>
</ul>


### ldapbase

<p>The search base for LDAP searches.  It's impossible to provide a meaningful default here, although the LDAP libraries might have one already set.  Generally, it should be the 'ou=Hosts' branch under your main directory.</p>


### ldapclassattrs

<p>The LDAP attributes to use to define Puppet classes.  Values should be comma-separated.</p>
<ul>
<li><strong>Default</strong>: puppetclass</li>
</ul>


### ldapnodes

<p>Whether to search for node configurations in LDAP.  See <a href="http://projects.puppetlabs.com/projects/puppet/wiki/LDAP_Nodes">http://projects.puppetlabs.com/projects/puppet/wiki/LDAP_Nodes</a> for more information.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### ldapparentattr

<p>The attribute to use to define the parent node.</p>
<ul>
<li><strong>Default</strong>: parentnode</li>
</ul>


### ldappassword

<p>The password to use to connect to LDAP.</p>


### ldapport

<p>The LDAP port.  Only used if <code>ldapnodes</code> is enabled.</p>
<ul>
<li><strong>Default</strong>: 389</li>
</ul>


### ldapserver

<p>The LDAP server.  Only used if <code>ldapnodes</code> is enabled.</p>
<ul>
<li><strong>Default</strong>: ldap</li>
</ul>


### ldapssl

<p>Whether SSL should be used when searching for nodes. Defaults to false because SSL usually requires certificates to be set up on the client side.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### ldapstackedattrs

<p>The LDAP attributes that should be stacked to arrays by adding the values in all hierarchy elements of the tree.  Values should be comma-separated.</p>
<ul>
<li><strong>Default</strong>: puppetvar</li>
</ul>


### ldapstring

<p>The search string used to find an LDAP node.</p>
<ul>
<li><strong>Default</strong>: (&amp;(objectclass=puppetClient)(cn=%s))</li>
</ul>


### ldaptls

<p>Whether TLS should be used when searching for nodes. Defaults to false because TLS usually requires certificates to be set up on the client side.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### ldapuser

<p>The user to use to connect to LDAP.  Must be specified as a full DN.</p>


### lexical

<p>Whether to use lexical scoping (vs. dynamic).</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### libdir

<p>An extra search path for Puppet.  This is only useful for those files that Puppet will load on demand, and is only guaranteed to work for those cases.  In fact, the autoload mechanism is responsible for making sure this directory is in Ruby's search path</p>
<ul>
<li><strong>Default</strong>: $vardir/lib</li>
</ul>


### listen

<p>Whether puppet agent should listen for connections.  If this is true, then by default only the <code>runner</code> server is started, which allows remote authorized and authenticated nodes to connect and trigger <code>puppet agent</code> runs.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### localcacert

<p>Where each client stores the CA certificate.</p>
<ul>
<li><strong>Default</strong>: $certdir/ca.pem</li>
</ul>


### localconfig

<p>Where puppet agent caches the local configuration.  An extension indicating the cache format is added automatically.</p>
<ul>
<li><strong>Default</strong>: $statedir/localconfig</li>
</ul>


### logdir

<p>The Puppet log directory.</p>
<ul>
<li><strong>Default</strong>: $vardir/log</li>
</ul>


### manage_internal_file_permissions

<p>Whether Puppet should manage the owner, group, and mode of files it uses internally</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>


### manifest

<p>The entry-point manifest for puppet master.</p>
<ul>
<li><strong>Default</strong>: $manifestdir/site.pp</li>
</ul>


### manifestdir

<p>Where puppet master looks for its manifests.</p>
<ul>
<li><strong>Default</strong>: $confdir/manifests</li>
</ul>


### masterhttplog

<p>Where the puppet master web server logs.</p>
<ul>
<li><strong>Default</strong>: $logdir/masterhttp.log</li>
</ul>


### masterlog

<p>Where puppet master logs.  This is generally not used, since syslog is the default log destination.</p>
<ul>
<li><strong>Default</strong>: $logdir/puppetmaster.log</li>
</ul>


### masterport

<p>Which port puppet master listens on.</p>
<ul>
<li><strong>Default</strong>: 8140</li>
</ul>


### maximum_uid

<p>The maximum allowed UID.  Some platforms use negative UIDs but then ship with tools that do not know how to handle signed ints, so the UIDs show up as huge numbers that can then not be fed back into the system.  This is a hackish way to fail in a slightly more useful way when that happens.</p>
<ul>
<li><strong>Default</strong>: 4294967290</li>
</ul>


### mkusers

<p>Whether to create the necessary user and group that puppet agent will run as.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### mode

<p>The effective 'run mode' of the application: master, agent, or user.</p>
<ul>
<li><strong>Default</strong>: master</li>
</ul>


### modulepath

<p>The search path for modules as a colon-separated list of directories.</p>
<ul>
<li><strong>Default</strong>: $confdir/modules:/usr/share/puppet/modules</li>
</ul>


### name

<p>The name of the application, if we are running as one.  The default is essentially $0 without the path or <code>.rb</code>.</p>
<ul>
<li><strong>Default</strong>: doc</li>
</ul>


### node_name

<p>How the puppetmaster determines the client's identity and sets the 'hostname', 'fqdn' and 'domain' facts for use in the manifest, in particular for determining which 'node' statement applies to the client. Possible values are 'cert' (use the subject's CN in the client's certificate) and 'facter' (use the hostname that the client reported in its facts)</p>
<ul>
<li><strong>Default</strong>: cert</li>
</ul>


### node_terminus

<p>Where to find information about nodes.</p>
<ul>
<li><strong>Default</strong>: plain</li>
</ul>


### noop

<p>Whether puppet agent should be run in noop mode.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### onetime

<p>Run the configuration once, rather than as a long-running daemon. This is useful for interactively running puppetd.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### parseonly

<p>Just check the syntax of the manifests.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### passfile

<p>Where puppet agent stores the password for its private key. Generally unused.</p>
<ul>
<li><strong>Default</strong>: $privatedir/password</li>
</ul>


### path

<p>The shell search path.  Defaults to whatever is inherited from the parent process.</p>
<ul>
<li><strong>Default</strong>: none</li>
</ul>


### pidfile

<p>The pid file</p>
<ul>
<li><strong>Default</strong>: $rundir/$name.pid</li>
</ul>


### plugindest

<p>Where Puppet should store plugins that it pulls down from the central server.</p>
<ul>
<li><strong>Default</strong>: $libdir</li>
</ul>


### pluginsignore

<p>What files to ignore when pulling down plugins.</p>
<ul>
<li><strong>Default</strong>: .svn CVS .git</li>
</ul>


### pluginsource

<p>From where to retrieve plugins.  The standard Puppet <code>file</code> type is used for retrieval, so anything that is a valid file source can be used here.</p>
<ul>
<li><strong>Default</strong>: puppet://$server/plugins</li>
</ul>


### pluginsync

<p>Whether plugins should be synced with the central server.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### postrun_command

<p>A command to run after every agent run.  If this command returns a non-zero return code, the entire Puppet run will be considered to have failed, even though it might have performed work during the normal run.</p>


### preferred_serialization_format

<p>The preferred means of serializing ruby instances for passing over the wire.  This won't guarantee that all instances will be serialized using this method, since not all classes can be guaranteed to support this format, but it will be used for all classes that support it.</p>
<ul>
<li><strong>Default</strong>: pson</li>
</ul>


### prerun_command

<p>A command to run before every agent run.  If this command returns a non-zero return code, the entire Puppet run will fail.</p>


### privatedir

<p>Where the client stores private certificate information.</p>
<ul>
<li><strong>Default</strong>: $ssldir/private</li>
</ul>


### privatekeydir

<p>The private key directory.</p>
<ul>
<li><strong>Default</strong>: $ssldir/private_keys</li>
</ul>


### publickeydir

<p>The public key directory.</p>
<ul>
<li><strong>Default</strong>: $ssldir/public_keys</li>
</ul>


### puppetdlockfile

<p>A lock file to temporarily stop puppet agent from doing anything.</p>
<ul>
<li><strong>Default</strong>: $statedir/puppetdlock</li>
</ul>


### puppetdlog

<p>The log file for puppet agent.  This is generally not used.</p>
<ul>
<li><strong>Default</strong>: $logdir/puppetd.log</li>
</ul>


### puppetport

<p>Which port puppet agent listens on.</p>
<ul>
<li><strong>Default</strong>: 8139</li>
</ul>


### queue_source

<p>Which type of queue to use for asynchronous processing.  If your stomp server requires authentication, you can include it in the URI as long as your stomp client library is at least 1.1.1</p>
<ul>
<li><strong>Default</strong>: stomp://localhost:61613/</li>
</ul>


### queue_type

<p>Which type of queue to use for asynchronous processing.</p>
<ul>
<li><strong>Default</strong>: stomp</li>
</ul>


### rails_loglevel

<p>The log level for Rails connections.  The value must be a valid log level within Rails.  Production environments normally use <code>info</code> and other environments normally use <code>debug</code>.</p>
<ul>
<li><strong>Default</strong>: info</li>
</ul>


### railslog

<p>Where Rails-specific logs are sent</p>
<ul>
<li><strong>Default</strong>: $logdir/rails.log</li>
</ul>


### report

<p>Whether to send reports after every transaction.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### report_port

<p>The port to communicate with the report_server.</p>
<ul>
<li><strong>Default</strong>: $masterport</li>
</ul>


### report_server

<p>The server to which to send transaction reports.</p>
<ul>
<li><strong>Default</strong>: $server</li>
</ul>


### reportdir

<p>The directory in which to store reports received from the client.  Each client gets a separate subdirectory.</p>
<ul>
<li><strong>Default</strong>: $vardir/reports</li>
</ul>


### reportfrom

<p>The 'from' email address for the reports.</p>
<ul>
<li><strong>Default</strong>: <a href="mailto:report&#64;(the system's fully qualified domain name)">report&#64;(the system's fully qualified domain name)</a></li>
</ul>


### reports

<p>The list of reports to generate.  All reports are looked for in puppet/reports/name.rb, and multiple report names should be comma-separated (whitespace is okay).</p>
<ul>
<li><strong>Default</strong>: store</li>
</ul>


### reportserver

<p>(Deprecated for 'report_server') The server to which to send transaction reports.</p>
<ul>
<li><strong>Default</strong>: $server</li>
</ul>


### reporturl

<p>The URL used by the http reports processor to send reports</p>
<ul>
<li><strong>Default</strong>: <a href="http://localhost:3000/reports">http://localhost:3000/reports</a></li>
</ul>


### req_bits

<p>The bit length of the certificates.</p>
<ul>
<li><strong>Default</strong>: 2048</li>
</ul>


### requestdir

<p>Where host certificate requests are stored.</p>
<ul>
<li><strong>Default</strong>: $ssldir/certificate_requests</li>
</ul>


### rest_authconfig

<p>The configuration file that defines the rights to the different rest indirections.  This can be used as a fine-grained authorization system for <code>puppet master</code>.</p>
<ul>
<li><strong>Default</strong>: $confdir/auth.conf</li>
</ul>


### rrddir

<p>The directory where RRD database files are stored. Directories for each reporting host will be created under this directory.</p>
<ul>
<li><strong>Default</strong>: $vardir/rrd</li>
</ul>


### rrdinterval

<p>How often RRD should expect data. This should match how often the hosts report back to the server.</p>
<ul>
<li><strong>Default</strong>: $runinterval</li>
</ul>


### rundir

<p>Where Puppet PID files are kept.</p>
<ul>
<li><strong>Default</strong>: $vardir/run</li>
</ul>


### runinterval

<p>How often puppet agent applies the client configuration; in seconds.</p>
<ul>
<li><strong>Default</strong>: 1800</li>
</ul>


### sendmail

<p>Where to find the sendmail binary with which to send email.</p>
<ul>
<li><strong>Default</strong>: /usr/sbin/sendmail</li>
</ul>


### serial

<p>Where the serial number for certificates is stored.</p>
<ul>
<li><strong>Default</strong>: $cadir/serial</li>
</ul>


### server

<p>The server to which server puppet agent should connect</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### server_datadir

<p>The directory in which serialized data is stored, usually in a subdirectory.</p>
<ul>
<li><strong>Default</strong>: $vardir/server_data</li>
</ul>


### servertype

<p>The type of server to use.  Currently supported options are webrick and mongrel.  If you use mongrel, you will need a proxy in front of the process or processes, since Mongrel cannot speak SSL.</p>
<ul>
<li><strong>Default</strong>: webrick</li>
</ul>


### show_diff

<p>Whether to print a contextual diff when files are being replaced.  The diff is printed on stdout, so this option is meaningless unless you are running Puppet interactively. This feature currently requires the <code>diff/lcs</code> Ruby library.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### signeddir

<p>Where the CA stores signed certificates.</p>
<ul>
<li><strong>Default</strong>: $cadir/signed</li>
</ul>


### smtpserver

<p>The server through which to send email reports.</p>
<ul>
<li><strong>Default</strong>: none</li>
</ul>


### splay

<p>Whether to sleep for a pseudo-random (but consistent) amount of time before a run.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### splaylimit

<p>The maximum time to delay before runs.  Defaults to being the same as the run interval.</p>
<ul>
<li><strong>Default</strong>: $runinterval</li>
</ul>


### ssl_client_header

<p>The header containing an authenticated client's SSL DN.  Only used with Mongrel.  This header must be set by the proxy to the authenticated client's SSL DN (e.g., <code>/CN=puppet.puppetlabs.com</code>). See <a href="http://projects.puppetlabs.com/projects/puppet/wiki/Using_Mongrel">http://projects.puppetlabs.com/projects/puppet/wiki/Using_Mongrel</a> for more information.</p>
<ul>
<li><strong>Default</strong>: HTTP_X_CLIENT_DN</li>
</ul>


### ssl_client_verify_header

<p>The header containing the status message of the client verification. Only used with Mongrel.  This header must be set by the proxy to 'SUCCESS' if the client successfully authenticated, and anything else otherwise. See <a href="http://projects.puppetlabs.com/projects/puppet/wiki/Using_Mongrel">http://projects.puppetlabs.com/projects/puppet/wiki/Using_Mongrel</a> for more information.</p>
<ul>
<li><strong>Default</strong>: HTTP_X_CLIENT_VERIFY</li>
</ul>


### ssldir

<p>Where SSL certificates are kept.</p>
<ul>
<li><strong>Default</strong>: $confdir/ssl</li>
</ul>


### statedir

<p>The directory where Puppet state is stored.  Generally, this directory can be removed without causing harm (although it might result in spurious service restarts).</p>
<ul>
<li><strong>Default</strong>: $vardir/state</li>
</ul>


### statefile

<p>Where puppet agent and puppet master store state associated with the running configuration.  In the case of puppet master, this file reflects the state discovered through interacting with clients.</p>
<ul>
<li><strong>Default</strong>: $statedir/state.yaml</li>
</ul>


### storeconfigs

<p>Whether to store each client's configuration.  This requires ActiveRecord from Ruby on Rails.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### strict_hostname_checking

<p>Whether to only search for the complete hostname as it is in the certificate when searching for node information in the catalogs.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### summarize

<p>Whether to print a transaction summary.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### syslogfacility

<p>What syslog facility to use when logging to syslog.  Syslog has a fixed list of valid facilities, and you must choose one of those; you cannot just make one up.</p>
<ul>
<li><strong>Default</strong>: daemon</li>
</ul>


### tagmap

<p>The mapping between reporting tags and email addresses.</p>
<ul>
<li><strong>Default</strong>: $confdir/tagmail.conf</li>
</ul>


### tags

<p>Tags to use to find resources.  If this is set, then only resources tagged with the specified tags will be applied. Values must be comma-separated.</p>


### templatedir

<p>Where Puppet looks for template files.  Can be a list of colon-seperated directories.</p>
<ul>
<li><strong>Default</strong>: $vardir/templates</li>
</ul>


### thin_storeconfigs

<p>Boolean; whether storeconfigs store in the database only the facts and exported resources. If true, then storeconfigs performance will be higher and still allow exported/collected resources, but other usage external to Puppet might not work</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### trace

<p>Whether to print stack traces on some errors</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### use_cached_catalog

<p>Whether to only use the cached catalog rather than compiling a new catalog on every run.  Puppet can be run with this enabled by default and then selectively disabled when a recompile is desired.</p>
<ul>
<li><strong>Default</strong>: false</li>
</ul>


### usecacheonfailure

<p>Whether to use the cached configuration when the remote configuration will not compile.  This option is useful for testing new configurations, where you want to fix the broken configuration rather than reverting to a known-good one.</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>


### user

<p>The user puppet master should run as.</p>
<ul>
<li><strong>Default</strong>: puppet</li>
</ul>


### vardir

<p>Where Puppet stores dynamic and growing data.  The default for this parameter is calculated specially, like confdir.</p>
<ul>
<li><strong>Default</strong>: /var/lib/puppet</li>
</ul>


### yamldir

<p>The directory in which YAML data is stored, usually in a subdirectory.</p>
<ul>
<li><strong>Default</strong>: $vardir/yaml</li>
</ul>


### zlib

<p>Boolean; whether to use the zlib library</p>
<ul>
<li><strong>Default</strong>: true</li>
</ul>
<hr />
<p><em>This page autogenerated on Tue May 03 09:52:18 -0700 2011</em></p>
